--- a/jenkins/docker-compose.yml
+++ b/jenkins/docker-compose.yml
@@ -1,13 +1,51 @@
 version: '3'
 services:
+  jenkins-docker:
+    privileged: true
+    image: docker:dind
+    ports:
+      - "3000:3000"
+      - "2376:2376"
+    networks:
+      jenkins:
+        aliases:
+          - docker
+    volumes:
+      - jenkins-data:/var/jenkins_home
+      - jenkins-certs:/certs/client
+    environment:
+      - DOCKER_TLS_CERTDIR=/certs
+    volumes:
+      - jenkins-data:/var/jenkins_home
+      - jenkins-certs:/certs/client
 
-  jenkins:
-    image: jenkins/jenkins:lts-jdk11
+  jenkins-blueocean:
+    depends_on:
+      - jenkins-docker
+    image: myjenkins-blueocean:1.1
+    build: .
     ports:
       - "8080:8080"
       - "50000:50000"
+    networks:
+      jenkins:
     volumes:
-      - jenkins-volume:/var/jenkins_home
+      - jenkins-data:/var/jenkins_home
+      - jenkins-certs:/certs/client:ro
+      - $HOME:/home  # required only to access locally cloned code
+    environment:
+      - DOCKER_HOST=tcp://docker:2376
+      - DOCKER_CERT_PATH=/certs/client
+      - DOCKER_TLS_VERIFY=1
 
 volumes:
-  jenkins-volume:
+  jenkins-certs:
+    driver: overlay2
+  jenkins-data:
+    driver: overlay2
+
+networks:
+  jenkins:
+    external: true
+    name: jenkins
+
